--- a/AzureFunctions.html
+++ b/AzureFunctions.html
@@ -1,13 +1,21 @@
+
+<html>
+<body>
+  <script type="module">
+    import mermaid from 'https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.esm.min.mjs';
+    mermaid.initialize({ startOnLoad: true });
+  </script>
+
 Azure Functions é um serviço que  permite aos desenvolvedores focar em escrever código sem se preocupar em manter os componentes de infraestrutura necessarios.
 
-::: mermaid
+<pre class="mermaid">
 mindmap
   root(Azure Functions - Tópicos importantes)
     Conceito Serverless
     Serviço com execução baseada em triggers e bindings
     Function Apps
     Armazenamento      
-:::
+</pre>
 
 Sobre serverless e Azure Functions:
 
@@ -15,7 +23,7 @@ Serverless é um conceito que pode ser colocado em uma escala.
 Um serviço pode ter um determinado grau de aderência ao conceito de serverless.
 FaaS, por exemplo, não é automaticamente serverless - somente quando configurada para ser totalmente gerencia e escalável até 0.
 
-::: mermaid
+<pre class="mermaid">
 mindmap
   root(Azure Functions - Serverless)
     )O que é Serverless(
@@ -27,27 +35,27 @@ mindmap
       (Permite que desenvolvedores escrevam pequenos trechos de código)
       (Uma aplicação serverless orquestra múltiplas funções serverless)
       (Cobrança com base na execução)
-:::
+</pre>
 
 Sobre triggers e bindings
 
 Triggers são eventos definidos para disparar a execução da function.
 Bindings - são os datasources que serão passados para a Function quando um trigger for disparado
 
-::: mermaid
+<pre class="mermaid">
 mindmap
   root(Azure Functions)
     Trigger e Bindings
       (Triggers)        
         Só é permitido um trigger por Function ))confirmar esse item((
       (Bindings)        
-:::
+</pre>
 
 Sobre armazenamento
 
 Toda function requer uma Storage account. Se a service account for excluída a Function não vai mais funcionar
 
-::: mermaid
+<pre class="mermaid">
 mindmap
   root(Azure Functions - Armazenamento)
     Blob Storage
@@ -59,14 +67,14 @@ mindmap
       Usado em taks hubs de Durable Functions
     Table Storage
       Usado em taks hubs de Durable Functions
-:::
+</pre>
 
 Sobre Function Apps
 
 Uma Function App define os recursos de computação de uma coleção de funções, tais como Hosting, Runtime (Versão do java, por exemplo) e outras configurações globais.
 Anatomia de uma Function App:
 
-::: mermaid
+<pre class="mermaid">
   graph TB
     sq[Input Bindings]
 
@@ -95,13 +103,13 @@ Anatomia de uma Function App:
         ''''''ci((http)) 
     end
 
-:::
+</pre>
 
 Anatomia de uma função
 
 Arquivos que importam para as funções
 
-::: mermaid
+<pre class="mermaid">
 mindmap
   root(Anatomia de uma Function)
     (Function.js)
@@ -113,7 +121,7 @@ mindmap
     (host.json)
     (Local Project)
       (Contem os arquivos para uso no ambiente local)
-:::
+</pre>
 
 Níveis de autorização
 
@@ -123,3 +131,8 @@ O _authorization level_ pode ser um dos seguintes valores.
 - anonymous - Nenhuma key é requerida
 - function - A function-specific API key é requerida (default)
 - admin - A senha master é requerida.
+
+Para alterar o nível de autorização acessamos a opçao Integration / Trigger / Authorization Level
+
+</body>
+</html>
